--- a/css/style.css
+++ b/css/style.css
@@ -254,9 +254,10 @@ img {
 }
 .video-background {
   position: fixed;
-  right: 0;
-  top: 0;
-  min-width: 100%;
-/*   min-height: 100%; */
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* min-height: 100%; */
   z-index: 0;
 }
